--- a/deploy/deploy_objarverse_abc.yaml
+++ b/deploy/deploy_objarverse_abc.yaml
@@ -46,7 +46,7 @@ spec:
           fi
           pip install -r requirements.txt
           python3 construct.py --data_path objarverse_abc.json --relative
-          python3 main.py
+          python3 main.py --port 8080
 
         volumeMounts:
         - {name: project, mountPath: /mnt/prj/}
@@ -56,3 +56,20 @@ spec:
         resources:
           limits:   { cpu: "48",  memory: "256Gi" }
           requests: { cpu: "48",  memory: "256Gi" }
+        ports:
+        - containerPort: 8080
+          name: http
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: dokh-3dviewer-objarverse-abc-svc
+spec:
+  selector:
+    job-name: dokh-3dviewer-objarverse-abc
+  ports:
+  - name: http
+    protocol: TCP
+    port: 8080
+    targetPort: 8080
+  type: ClusterIP
